--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -2,10 +2,12 @@ Package: RMR.ICP
 Type: Package
 Title: What the package does (short line)
 Version: 1.0
-Date: 2024-04-06
+Date: 2024-12-18
 Author: Who wrote it
-Maintainer: Who to complain to <yourfault@somewhere.net>
-Description: More about what it does (maybe more than one line)
+Maintainer: Who to complain to
+    <yourfault@somewhere.net>
+Description: More about what it does
+    (maybe more than one line)
 License: What license is it under?
-Imports: Rcpp (>= 1.0.11)
+Imports: Rcpp (>= 1.0.13)
 LinkingTo: Rcpp, RcppArmadillo
